# GraphUndirectedMatrix

./: CMakeLists.txt  Makefile
include/: graph.h  tests.h
input/: data.txt
output/: outFile.txt
src/: graph.c  main.c  tests.c
